Prevent code blocks overflowing at small viewports

--- a/assets/scss/_markdown-content.scss
+++ b/assets/scss/_markdown-content.scss
@@ -1,7 +1,7 @@
 .markdown-content {
   pre[class*="language-"] {
-    margin-left: -1em;
-    margin-right: -1em;
+    margin-left: -1rem;
+    margin-right: -1rem;
     border-radius: 0;
   }
 
